--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enver</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="normalize.css" /> 
+    <link rel="stylesheet" href="style-dist.css" />
+    <link rel="stylesheet" href="normalize-dist.css" /> 
     <link rel="shortcut icon" href="img/Logo.ico" type="image/x-icon" />
-    <script src="script.js"></script>
   </head>
   <body>
     <header>
@@ -221,5 +220,6 @@
         </div>
       </div>
     </footer>
+    <script src="script-dist.js"></script>
   </body>
 </html>
