--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           </div>
           <nav class="nav">
             <a class="nav-element" href="#">Home</a>
-            <a class="nav-element" href="#">Services</a>
-            <a class="nav-element" href="#">Our Project</a>
+            <a class="nav-element" href="#services">Services</a>
+            <a class="nav-element" href="#projects">Our Project</a>
             <a class="nav-element" href="#">About us</a>
           </nav>
           <button class="contact-button">Contact us</button>
@@ -38,7 +38,7 @@
               such as UI/UX Design to developers, we will provide the best
               <br />service for those of you who use our services.
             </p>
-            <a href="#" class="start-screen-button" id="header-button-services">
+            <a href="#services" class="start-screen-button" id="header-button-services">
               Our Services
               <svg
                 width="17"
@@ -79,7 +79,7 @@
         </div>
 
         <div class="suggestions-section">
-          <h2>The Service We Provide<br />For You</h2>
+          <h2 id="services">The Service We Provide<br />For You</h2>
           <div class="card-block">
             <div class="card-line">
               <div class="card">
@@ -131,7 +131,7 @@
             </div>
           </div>
           <div class="center slider-section">
-            <h2>Our Awesom Portfolio</h2>
+            <h2 id="projects">Our Awesom Portfolio</h2>
             <div class="slider-item work-example">
               <img
                 src="img/work-example1.svg"
