--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" href="img/Logo.ico" type="image/x-icon" />
   </head>
   <body>
@@ -71,7 +72,7 @@
           </div>
         </div>
 
-        <div class="video-section">
+        <div class="video-section" data-aos="fade-up">
           <div class="top-video-section">
             <h2>Why Enver Is The<br />Best Choice</h2>
             <p>
@@ -88,7 +89,7 @@
           ></iframe>
         </div>
 
-        <div class="suggestions-section">
+        <div class="suggestions-section" data-aos="fade-up">
           <h2 id="services">The Service We Provide<br />For You</h2>
           <div class="card-block">
             <div class="card-line">
@@ -143,7 +144,7 @@
         </div>
       </div>
       <!-- Slider main container -->
-      <div class="swiper mySwiper">
+      <div class="swiper mySwiper" data-aos="fade-up">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <img src="img/work-example1.svg" alt="work-example">
@@ -203,6 +204,7 @@
         </div>
       </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
   </body>
