--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
         </div>
       </div>
       <!-- Slider main container -->
-      <div class="swiper mySwiper" data-aos="fade-up">
+      <div class="swiper mySwiper" data-aos="fade-up" id="projects">
+        <h2>Our Awesome Portofolio</h2>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <img src="img/work-example1.svg" alt="work-example">
