--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
     />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="shortcut icon" href="img/Logo.ico" type="image/x-icon" />
   </head>
   <body>
@@ -148,19 +148,19 @@
         <h2>Our Awesome Portofolio</h2>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="img/work-example1.svg" alt="work-example">
-            <img src="img/work-example1.svg" alt="work-example">
-            <img src="img/work-example1.svg" alt="work-example">
+            <img src="img/work-example1.svg" alt="work-example" />
+            <img src="img/work-example1.svg" alt="work-example" />
+            <img src="img/work-example1.svg" alt="work-example" />
           </div>
           <div class="swiper-slide">
-            <img src="img/work-example2.svg" alt="work-example">
-            <img src="img/work-example2.svg" alt="work-example">
-            <img src="img/work-example2.svg" alt="work-example">
+            <img src="img/work-example2.svg" alt="work-example" />
+            <img src="img/work-example2.svg" alt="work-example" />
+            <img src="img/work-example2.svg" alt="work-example" />
           </div>
           <div class="swiper-slide">
-            <img src="img/work-example3.svg" alt="work-example">
-            <img src="img/work-example3.svg" alt="work-example">
-            <img src="img/work-example3.svg" alt="work-example">
+            <img src="img/work-example3.svg" alt="work-example" />
+            <img src="img/work-example3.svg" alt="work-example" />
+            <img src="img/work-example3.svg" alt="work-example" />
           </div>
         </div>
         <div class="swiper-pagination"></div>
@@ -174,12 +174,34 @@
           </div>
           <div class="visually-hidden contact-form hystmodal" id="myModal">
             <div class="hystmodal__window">
-              <div class="hystmodal-info">
-                <h2>Contact information:</h2>
-                <p>phone: +375 (29) 24-00-985</p>
-                <p>email: leshawin53@gmail.com</p>
-              </div>
-              <button class="close-button contact-button">Close</button>
+              <form id="form" data-parsley-validate>
+                <div class="hystmodal-info">
+                  <h2>Contact form:</h2>
+                  <p>Enter your phone(with +375):</p>
+                  <input class="input-element-phone" type="text" required minlength='17'/>
+                  <p>Enter your mail:</p>
+                  <input
+                    placeholder="e.g. mail@example.com"
+                    class="form-control parsley-success"
+                    id="user_email"
+                    data-parsley-required=""
+                    data-parsley-type="email"
+                    data-parsley-validate-full-width-characters="true"
+                    type="text"
+                    value=""
+                    name="user[email]"
+                    data-parsley-id="17"
+                    required
+                  />
+                  <p>Which service do you want use:</p>
+                  <input class="input-element-services" type="text" required/>
+                  <p>Bank-card:</p>
+                  <input class="input-element-card" type="text" required minlength='20'/>
+                  <p>Expiration dates:</p>
+                  <input class="input-element-date" type="text" required minlength='10'/>
+                </div>
+                <button class="close-button contact-button">Send🡭</button>
+              </form>
             </div>
           </div>
         </div>
@@ -205,6 +227,20 @@
         </div>
       </div>
     </footer>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/parsley.js/2.9.2/parsley.min.js"
+      integrity="sha512-eyHL1atYNycXNXZMDndxrDhNAegH2BDWt1TmkXJPoGf1WLlNYt08CSjkqF5lnCRmdm3IrkHid8s2jOUY4NIZVQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/cleave.js@1.6.0/dist/cleave.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cleave.js@1.6.0/dist/addons/cleave-phone.by.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
