--- a/index.html
+++ b/index.html
@@ -178,7 +178,12 @@
                 <div class="hystmodal-info">
                   <h2>Contact form:</h2>
                   <p>Enter your phone(with +375):</p>
-                  <input class="input-element-phone" type="text" required minlength='17'/>
+                  <input
+                    class="input-element-phone"
+                    type="text"
+                    required
+                    minlength="17"
+                  />
                   <p>Enter your mail:</p>
                   <input
                     placeholder="e.g. mail@example.com"
@@ -194,11 +199,21 @@
                     required
                   />
                   <p>Which service do you want use:</p>
-                  <input class="input-element-services" type="text" required/>
+                  <input class="input-element-services" type="text" required />
                   <p>Bank-card:</p>
-                  <input class="input-element-card" type="text" required minlength='20'/>
+                  <input
+                    class="input-element-card"
+                    type="text"
+                    required
+                    minlength="19"
+                  />
                   <p>Expiration dates:</p>
-                  <input class="input-element-date" type="text" required minlength='10'/>
+                  <input
+                    class="input-element-date"
+                    type="text"
+                    required
+                    minlength="10"
+                  />
                 </div>
                 <button class="close-button contact-button">Send🡭</button>
               </form>
